--- a/package.json
+++ b/package.json
@@ -1,29 +1,96 @@
-{
-  "name": "bienesraices",
-  "version": "1.0.0",
-  "description": "Curso Desarrollo Web Completo",
-  "main": "gulpfile.js",
-  "scripts": {
-    "dev": "gulp"
-  },
-  "author": "Juan De La Torre",
-  "license": "ISC",
-  "devDependencies": {
-    "cssnano": "^5.1.0",
-    "gulp": "^4.0.2",
-    "gulp-autoprefixer": "^8.0.0",
-    "gulp-cache": "^1.1.3",
-    "gulp-clean": "^0.4.0",
-    "gulp-concat": "^2.6.1",
-    "gulp-imagemin": "^7.1.0",
-    "gulp-notify": "^4.0.0",
-    "gulp-postcss": "^9.0.1",
-    "gulp-rename": "^2.0.0",
-    "gulp-sass": "^5.1.0",
-    "gulp-sourcemaps": "^3.0.0",
-    "gulp-terser-js": "^5.2.2",
-    "gulp-webp": "^4.0.1",
-    "sass": "^1.49.9",
-    "terser": "^4.8.0"
-  }
-}
+<?php 
+    require 'includes/funciones.php';
+    incluirTemplate('header');
+?>
+
+    <main class="contenedor seccion contenido-centrado">
+        <h1>Nuestro Blog</h1>
+
+        <article class="entrada-blog">
+            <div class="imagen">
+                <picture>
+                    <source srcset="build/img/blog1.webp" type="image/webp">
+                    <source srcset="build/img/blog1.jpg" type="image/jpeg">
+                    <img loading="lazy" src="build/img/blog1.jpg" alt="Texto Entrada Blog">
+                </picture>
+            </div>
+
+            <div class="texto-entrada">
+                <a href="entrada.php">
+                    <h4>Terraza en el techo de tu casa</h4>
+                    <p>Escrito el: <span>20/10/2021</span> por: <span>Admin</span> </p>
+
+                    <p>
+                        Consejos para construir una terraza en el techo de tu casa con los mejores materiales y ahorrando dinero
+                    </p>
+                </a>
+            </div>
+        </article>
+
+        <article class="entrada-blog">
+            <div class="imagen">
+                <picture>
+                    <source srcset="build/img/blog2.webp" type="image/webp">
+                    <source srcset="build/img/blog2.jpg" type="image/jpeg">
+                    <img loading="lazy" src="build/img/blog2.jpg" alt="Texto Entrada Blog">
+                </picture>
+            </div>
+
+            <div class="texto-entrada">
+                <a href="entrada.php">
+                    <h4>Guía para la decoración de tu hogar</h4>
+                    <p>Escrito el: <span>20/10/2021</span> por: <span>Admin</span> </p>
+
+                    <p>
+                        Maximiza el espacio en tu hogar con esta guia, aprende a combinar muebles y colores para darle vida a tu espacio
+                    </p>
+                </a>
+            </div>
+        </article>
+
+        <article class="entrada-blog">
+            <div class="imagen">
+                <picture>
+                    <source srcset="build/img/blog3.webp" type="image/webp">
+                    <source srcset="build/img/blog3.jpg" type="image/jpeg">
+                    <img loading="lazy" src="build/img/blog3.jpg" alt="Texto Entrada Blog">
+                </picture>
+            </div>
+
+            <div class="texto-entrada">
+                <a href="entrada.php">
+                    <h4>Terraza en el techo de tu casa</h4>
+                    <p>Escrito el: <span>20/10/2021</span> por: <span>Admin</span> </p>
+
+                    <p>
+                        Consejos para construir una terraza en el techo de tu casa con los mejores materiales y ahorrando dinero
+                    </p>
+                </a>
+            </div>
+        </article>
+
+        <article class="entrada-blog">
+            <div class="imagen">
+                <picture>
+                    <source srcset="build/img/blog4.webp" type="image/webp">
+                    <source srcset="build/img/blog4.jpg" type="image/jpeg">
+                    <img loading="lazy" src="build/img/blog4.jpg" alt="Texto Entrada Blog">
+                </picture>
+            </div>
+
+            <div class="texto-entrada">
+                <a href="entrada.php">
+                    <h4>Guía para la decoración de tu hogar</h4>
+                    <p>Escrito el: <span>20/10/2021</span> por: <span>Admin</span> </p>
+
+                    <p>
+                        Maximiza el espacio en tu hogar con esta guia, aprende a combinar muebles y colores para darle vida a tu espacio
+                    </p>
+                </a>
+            </div>
+        </article>
+    </main>
+
+<?php 
+    incluirTemplate('footer');
+?>
